# nexus-client-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  justfile
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
doc/: application.wadl  with-curl.md
src/: auth.rs  client.rs  lib.rs  main.rs  model.rs  remote_sync.rs  restapi.rs  util.rs
tests/data/: activity.json  activity.xml  activity0.json  content-index.html  index.json  index.xml  profile_repositories.json  profile_repositories.xml  promoteRequest.json  promoteRequest.xml  promoteResponse.xml  stagingProfiles.json  stagingProfiles.xml
