[package]
name = "nexus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
reqwest = "0.11.16"
clap = "4.2.1"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.159", features=["derive"] }
serde_json = "1.0.95"
netrc = "0.4.1"
netrc-rs = "0.1.2"
url = "2.3.1"
